# FluentSerialAssistant

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: feature-roadmap.md
docs/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
packaging/linux/: tech.zhangshu.FluentSerialAssistant.desktop
scripts/: format_code.py  package_release.ps1
src/: main.cpp
src/app/core/: app_i18n.cpp  app_i18n.h  app_settings.cpp  app_settings.h  checksum_utils.cpp  checksum_utils.h  font_preferences.cpp  font_preferences.h  hex_utils.cpp  hex_utils.h  modbus_utils.cpp  modbus_utils.h  protocol_template.cpp  protocol_template.h  script_runner.cpp  script_runner.h  text_encoding.cpp  text_encoding.h  update_checker.cpp  update_checker.h
src/app/resources/: app.qrc  app_icon.icns  app_icon.rc.in
src/app/resources/i18n/: fluentserialassistant.en_US.qm  fluentserialassistant.en_US.ts  fluentserialassistant.zh_CN.qm  fluentserialassistant.zh_CN.ts
src/app/serial/: serial_controller.cpp  serial_controller.h
src/app/view/: app_page.cpp  app_page.h  data_table_window.cpp  data_table_window.h  fluent_tooltip_helper.h  main_window.cpp  main_window.h  quick_plot_window.cpp  quick_plot_window.h  settings_page.cpp  settings_page.h  workbench_page.cpp  workbench_page.h  workbench_sessions_page.cpp  workbench_sessions_page.h
src/app/view/workbench/: workbench_page_auto_reply.cpp  workbench_page_checksum.cpp  workbench_page_connection.cpp  workbench_page_data_table.cpp  workbench_page_files.cpp  workbench_page_internal.h  workbench_page_layout.cpp  workbench_page_macros.cpp  workbench_page_modbus.cpp  workbench_page_packets.cpp  workbench_page_plot.cpp  workbench_page_protocol_templates.cpp  workbench_page_scripts.cpp  workbench_page_side_sections.cpp  workbench_page_state.cpp  workbench_page_terminal.cpp  workbench_page_terminal_sections.cpp
